<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_50"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/item_serial_tv"
            android:textColor="@color/color_3d3d3d"
            android:textSize="@dimen/qb_px_28"
            android:textStyle="bold" />

        <View
            android:layout_width="0.75dp"
            android:layout_height="match_parent"
            android:background="@color/color_ebebeb"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/item_dishes_tv"
            android:textColor="@color/color_3d3d3d"
            android:textSize="@dimen/qb_px_28"
            android:textStyle="bold" />

        <View
            android:layout_width="0.75dp"
            android:layout_height="match_parent"
            android:background="@color/color_ebebeb"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/item_price_tv"
            android:textColor="@color/color_3d3d3d"
            android:textSize="@dimen/qb_px_28"
            android:textStyle="bold" />

        <View
            android:layout_width="0.75dp"
            android:layout_height="match_parent"
            android:background="@color/color_ebebeb"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/item_count_tv"
            android:textColor="@color/color_3d3d3d"
            android:textSize="@dimen/qb_px_28"
            android:textStyle="bold" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/color_ebebeb" />

</LinearLayout>