<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_e4e4e4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/meal_title"
        android:background="@color/color_3d3d3d"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_70">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:textSize="@dimen/qb_px_30"
            android:text="@string/app_order_title"
            android:textColor="@color/color_ffffff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/meal_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/qb_px_10"
            android:gravity="center_vertical"
            android:text="@string/order_eat_tv"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/qb_px_30" />

        <TextView
            android:id="@+id/meal_week_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/meal_type_tv"
            android:gravity="center_vertical"
            android:text="@string/order_week_tv"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/qb_px_25" />

        <com.order.android.view.CustomTimeView
            android:id="@+id/meal_time_tv"
            android:text="2020.05.28"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/qb_px_30"
            android:layout_toLeftOf="@+id/meal_week_tv"
            android:gravity="center_vertical"
            android:layout_marginRight="@dimen/qb_px_15"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/meal_details_rl"
        android:layout_above="@+id/meal_user_details_rl"
        android:layout_below="@+id/meal_title"
        android:layout_marginLeft="@dimen/qb_px_25"
        android:layout_marginTop="@dimen/qb_px_10"
        android:background="@drawable/order_list_background"
        android:layout_marginRight="@dimen/qb_px_25"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="0.75dp"
            android:layout_marginLeft="0.75dp"
            android:layout_marginRight="0.75dp"
            android:id="@+id/dishes_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/meal_user_details_rl"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="@dimen/qb_px_140">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.order.android.view.CircleImageView
                android:id="@+id/meal_user_circle_img"
                android:layout_width="@dimen/qb_px_100"
                android:layout_height="@dimen/qb_px_100"
                android:src="@mipmap/hugh"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/qb_px_22"
                app:civ_border_width="@dimen/qb_px_2"
                app:civ_border_color="@color/light" />
            <LinearLayout
                android:id="@+id/meal_user_ll"
                android:layout_toRightOf="@+id/meal_user_circle_img"
                android:layout_marginLeft="@dimen/qb_px_10"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:orientation="vertical"

                android:layout_height="@dimen/qb_px_100">

                <TextView
                    android:id="@+id/order_username_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/order_username_tv"
                    android:textSize="@dimen/qb_px_25"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/order_user_address_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/order_user_address_tv"
                    android:textSize="@dimen/qb_px_25"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/price_meal_ll"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/qb_px_35"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/total_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/order_total_price_tv"
                    android:textSize="@dimen/qb_px_35" />

                <TextView
                    android:id="@+id/order_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/qb_px_10"
                    android:gravity="center_vertical"
                    android:text="4.0"
                    android:textColor="@color/color_ff004e"
                    android:textSize="@dimen/qb_px_40"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/order_unit_tv"
                    android:textSize="@dimen/qb_px_35" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout

                android:layout_marginRight="@dimen/qb_px_25"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/order_previous_btn"
                    android:layout_width="@dimen/qb_px_100"
                    android:layout_height="@dimen/qb_px_60"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_bottom_cyan_selector"
                    android:text="@string/order_previous_tv"
                    android:textColor="@color/color_ffffff"
                    android:textSize="@dimen/qb_px_25" />

                <Button

                    android:id="@+id/order_submit_btn"
                    android:layout_width="@dimen/qb_px_100"
                    android:layout_height="@dimen/qb_px_60"
                    android:layout_centerInParent="true"
                    android:background="@drawable/btn_bottom_sure_selector"
                    android:text="@string/dialog_submit_tv"
                    android:textColor="@color/color_ffffff"
                    android:textSize="@dimen/qb_px_25" />

                <Button
                    android:id="@+id/order_cancel_btn"
                    android:layout_width="@dimen/qb_px_100"
                    android:layout_height="@dimen/qb_px_60"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_bottom_cancel_selector"
                    android:text="@string/order_cancel_tv"
                    android:textColor="@color/color_ffffff"
                    android:textSize="@dimen/qb_px_25" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>