<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/color_5F696F"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_60">
        <ImageView
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/qb_px_20"
            android:id="@+id/back_iv"
            android:src="@mipmap/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/setting_title_tv"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/qb_px_30" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/custom_progress_blue_progress"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true">
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="@dimen/qb_px_540"
                android:layout_height="@dimen/qb_px_80"
                android:layout_gravity="center_horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/qb_px_5"
                    android:gravity="center_vertical"
                    android:text="@string/setting_face_server_tv"
                    android:textColor="@color/color_1E232B"
                    android:textSize="@dimen/qb_px_18" />

                <EditText
                    android:id="@+id/face_address_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"

                    android:layout_toRightOf="@+id/textview1"
                    android:background="@null"
                    android:hint="@string/setting_hint_face_server_tv"
                    android:singleLine="true"
                    android:textColor="@color/color_5F696F"
                    android:textColorHint="@color/color_1E232B"
                    android:textSize="@dimen/qb_px_18" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_1E232B"/>

            <RelativeLayout

                android:layout_width="@dimen/qb_px_540"
                android:layout_height="@dimen/qb_px_80"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/setting_web_server_tv"
                    android:textColor="@color/color_5F696F"
                    android:textSize="@dimen/qb_px_18" />

                <EditText
                    android:id="@+id/web_address_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/textview2"
                    android:background="@null"
                    android:hint="@string/setting_web_hint_server_tv"
                    android:singleLine="true"
                    android:textColor="@color/color_5F696F"
                    android:textColorHint="@color/color_1E232B"
                    android:textSize="@dimen/qb_px_18" />
            </RelativeLayout>

            <Button
                android:id="@+id/setting_save_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_80"
                android:background="@drawable/setting_save_btn"
                android:text="@string/dialog_submit_tv"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/qb_px_20" />
        </LinearLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>